# vmcnet

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  antisym_acc_test.py  ints.pickle  lint.sh  mkdocs.yml  mypy.ini  prep.py  pyproject.toml  setup.cfg  setup.py  supervised_surrogate.py  tox.ini
.github/workflows/: tests.yml
analyses/surrogate_4_29_23/: Analysis-Copy1.ipynb
analyses/surrogate_noclip_5_19_23/: analysis.ipynb
analyses/surrogate_plot_5_15_23/: Hard noclip.ipynb  checkpoint.npz  config.json  ref_config.npz
base_configs/: LiH.json  quicktest.json
docs/: gen_api_ref.py
docs/stylesheets/: content.css  docstrings.css  sidebar.css
fast_laplacian/: accuracy_test.py  cofactor.py  fast_laplacian.py  fast_laplacian_plot.py  perf_test.py
ibp/: H2 plots.ipynb  config.json  energy.txt  energy_ibp_ind.txt  variance.txt  variance_ibp_ind.txt
ibp/H2/: energy_standard.txt  energy_standard_20.txt  energy_transformed.txt  energy_transformed_200k.txt  energy_transformed_float64.txt  energy_transformed_noclip.txt  variance_standard.txt  variance_standard_20.txt  variance_transformed.txt  variance_transformed_200k.txt
postprocess/: browse.py  load.py  plot.ipynb  supervised.py
preset_configs/: H4.json  quicktest.json  warm_start.json
tests/: __init__.py  conftest.py  test_harmonic_osc.py  test_utils.py
tests/examples/: sgd_train.py  test_harmonic_oscillator.py  test_hydrogen_like_atom.py
tests/integrations/: test_log_domain_kfac.py  test_newton.py
tests/integrations/examples/: __init__.py  discrete_nolog_train.py  kfac_discrete_nolog_train.py  kfac_train.py  run_harmonic_oscillator.py  sgd_train.py  test_harmonic_oscillator.py  test_hubbard_model.py  test_hydrogen_like_atom.py
tests/integrations/mcmc/: test_statistics.py
tests/integrations/train/: test_runners.py
tests/units/: test_utils.py  utils.py
tests/units/examples/: __init__.py  test_harmonic_oscillator.py
tests/units/mcmc/: __init__.py  test_dynamic_width_position_amplitude.py  test_metropolis.py  test_position_amplitude_core.py  test_statistics.py
tests/units/models/: __init__.py  test_antiequivariance.py  test_antisymmetry.py  test_construct.py  test_core.py  test_equivariance.py  test_fastcore.py  test_harmonic_osc.py  test_invariance.py  test_jastrow.py  test_odd_symmetry.py  test_sign_covariance.py  test_sign_symmetry.py  utils.py
tests/units/physics/: __init__.py  test_core.py  test_energy.py  test_kinetic.py  test_potential.py  test_spin.py
tests/units/train/: __init__.py  test_parse_config_flags.py  test_vmc.py
tests/units/updates/: __init__.py  test_data.py  test_sr.py
tests/units/utils/: __init__.py  test_io.py  (+3 more)
vmcnet/: B_adam_ferminet.py  __init__.py  jax_bug_demo.py  start_from_checkpoint.py
vmcnet/examples/: __init__.py  harmonic_oscillator.py  hubbard_model.py  hydrogen_like_atom.py
vmcnet/mcmc/: __init__.py  dynamic_width_position_amplitude.py  metropolis.py  position_amplitude_core.py  simple_position_amplitude.py  statistics.py
vmcnet/models/: __init__.py  antiequivariance.py  antisymmetry.py  construct.py  core.py  equivariance.py  harmonic_osc.py  invariance.py  jastrow.py  odd_symmetry.py  orbitals.py  sign_covariance.py  sign_symmetry.py  weights.py
vmcnet/physics/: __init__.py  core.py  energy.py  fwdlap.py  ibp.py  kinetic.py  potential.py  random_particle.py  spin.py
vmcnet/postprocess/: nonsymmetry.py  pickrun.py  postprocess.py  re_construct.py  test_nonsym.py
vmcnet/train/: __init__.py  boson_surrogate.py  default_config.py  parse_config_flags.py  runners.py  stable_sample.py  standard_method.py  supervised.py  supervised_surrogate.py  surrogate.py  surrogate_joint.py  surrogate_supervised.py  vmc.py
vmcnet/updates/: __init__.py  data.py  gauss_newton.py  kfac.py  optax_utils.py  optimizers.py  params.py  params_MERGE.py  parse_config.py  parse_optimizer_config.py  proxsr.py  spring.py  sr.py  update_param_fns.py  var_sr.py
vmcnet/utils/: __init__.py  array_helpers.py  checkpoint.py  config.py  curvature_tags_and_blocks.py  distribute.py  io.py  kfac.py  log_linear_exp.py  pytree_helpers.py  slog_helpers.py  types.py  typing.py  wandb.py
