[metadata]
name = vmcnet
version = 0.1.0
description = Flexible, general-purpose VMC framework, built on JAX.
author = Jeffmin Lin, Gil Goldshlager
license = MIT
license_file = LICENSE
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3.9

[options]
packages =
    vmcnet
install_requires =
    absl-py>=0.12.0
    flax==0.7.2
    jax==0.4.14
    jaxlib==0.4.14
    kfac_jax==0.0.5
    ml-collections==0.1.1
    numpy==1.25.2
    optax==0.1.7
python_requires = >=3.9
zip_safe = no

[options.entry_points]
console_scripts =
    vmc-molecule = vmcnet.train.runners:run_molecule
    vmc-statistics = vmcnet.train.runners:vmc_statistics

[options.extras_require]
testing =
    black==23.1.0
    chex==0.1.82
    pytest>=6.0
    pytest-mock>=3.6
    pytest-cov>=2.0
    mypy==1.1.1
    flake8>=3.9
    pydocstyle[toml]>=6.1
    tox>=3.24
doc-gen = 
    mkdocs==1.2.3
    mkdocs-gen-files==0.3.3
    mkdocs-literate-nav==0.4.0
    mkdocs-material==8.0.5
    mkdocstrings==0.16.2
    mike==1.1.2

[options.package_data]
vmcnet = py.typed

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
ignore = E203,W503
per-file-ignores = __init__.py:F401
